# CanvasTUI

./: Cargo.toml  README.md  resp.json
src/: fetch.rs  main.rs  tui.rs
