[package]
name = "canvastui"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.31"
log = "0.4.28"
ratatui = { version = "0.29.0", features = ["macros", "widget-calendar"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
time = { version = "0.3.44", features = ["formatting", "local-offset", "parsing", "serde"] }
tokio = { version = "1.48.0", features = ["full"] }
tokio-util = "0.7.16"
webbrowser = "1.0.5"
